# upstream-probe

./: .env.example  GLOBAL_STANDARDS_V1  README.md  config.example.yml  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
deploy/systemd/: upstream-probe.service  upstream-probe.tmpfiles
docs/: architecture.md  runbook.md
src/upstream_probe/: cli.py  config.py  influx.py  logging.py  probes.py
tests/: test_config.py  test_influx.py
